fix gap issue with navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,6 @@ html, body {
 
 #all_content {
   min-width: 980px;
-  // background-color: black;
   min-height: 100%;
   background: black;
   background-image: url('/assets/black4.jpg');
@@ -37,8 +36,8 @@ html, body {
 }
 
 #main {
-  // background-color: white;
-  background: url('/assets/seamlesstexture1_500.jpg');
+  background: white;
+  background-image: url('/assets/seamlesstexture1_500.jpg');
   min-height: 400px;
   padding: 30px;
   overflow: auto;
@@ -67,36 +66,37 @@ a:visited {
 }
 
 #header {
-  // Adjust or remove.
-  height: 112px;
-  padding-top: 28px;
-  color: #BCBBBB;
-  margin: 0;
-  border: none;
-  font-size: 0;
-  // background-color: black;
-  h1 {
-    font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+  height: 140px;
+  #header_title {
+    padding-top: 26px;
+    height: 60px;
     margin: 0 0 10px 0;
-    font-size: 40px;
-    display: inline-block;
-    padding-left: 10px;
-  }
-  h1 span {
-    color: #FFA500;
-    font-size: 50px;
-    font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
+    h1 {
+      font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+      margin: 0;
+      font-size: 40px;
+      display: inline-block;
+      padding-left: 10px;
+      color: #BCBBBB;
+    }
+    h1 span {
+      color: #FFA500;
+      font-size: 50px;
+      font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
+    }
   }
   // NAVIGATION BAR.
   #nav_bar {
     // position: absolute;
     left: 0;
     right: 0;
-    // background-color: gray;
-    background: url('/assets/metal_test.jpg');
+    background: gray;
+    background-image: url('/assets/metal_test.jpg');
     border-radius: 10px 10px 0px 0px;
+    height: 44px;
     ul {
       width: 980px;
+      height: 24px;
       padding: 10px 0px 10px 0px;
       // Eliminates the space between list items.
       font-size: 0;
@@ -131,6 +131,7 @@ a:visited {
       position: absolute;
       left: 0px;
       right: 0px;
+      height: auto;
       padding: 0px;
       margin: 10px 0 0 0;
       width: 250px;
